// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createPlugin options = {}, should return default robots.txt 1`] = `
"User-agent: *
Allow: /
Sitemap: https://example.com/sitemap.xml
"
`;

exports[`createPlugin options = undefined, should return default robots.txt 1`] = `
"User-agent: *
Allow: /
Sitemap: https://example.com/sitemap.xml
"
`;

exports[`createPlugin sitemap = "", should return robots.txt without \`Sitemap:\` 1`] = `
"User-agent: *
Allow: /
"
`;

exports[`createPlugin sitemap = [], should return robots.txt without \`Sitemap:\` 1`] = `
"User-agent: *
Allow: /
"
`;

exports[`createPlugin sitemap = false, should return robots.txt without \`Sitemap:\` 1`] = `
"User-agent: *
Allow: /
"
`;

exports[`createPlugin sitemap = true, should return default robots.txt 1`] = `
"User-agent: *
Allow: /
Sitemap: https://example.com/sitemap.xml
"
`;

exports[`createPlugin sitemap is valid URL string, should return \`Sitemap: https://test\` 1`] = `
"User-agent: *
Allow: /
Sitemap: https://test
"
`;

exports[`createPlugin sitemap is valid array of URL string, should return array of Sitemap 1`] = `
"User-agent: *
Allow: /
Sitemap: https://test1
Sitemap: https://test2
"
`;

exports[`createPlugin host = "", should return robots.txt without \`Host:\` 1`] = `
"User-agent: *
Allow: /
Sitemap: https://example.com/sitemap.xml
"
`;

exports[`createPlugin host is valid, should return robots.txt with \`Host: abc\` 1`] = `
"User-agent: *
Allow: /
Sitemap: https://example.com/sitemap.xml
Host: abc
"
`;

exports[`createPlugin host is valid, should return robots.txt with \`Host: abc.com\` 1`] = `
"User-agent: *
Allow: /
Sitemap: https://example.com/sitemap.xml
Host: abc.com
"
`;

exports[`createPlugin policy is undefined, should return default robots.txt 1`] = `
"User-agent: *
Allow: /
Sitemap: https://example.com/sitemap.xml
"
`;

exports[`createPlugin crawlDelay: 34, should return \`Crawl-delay: 34\` 1`] = `
"User-agent: test
Allow: /
Crawl-delay: 34
Sitemap: https://example.com/sitemap.xml
"
`;

exports[`createPlugin allow is array, and disallow is array, should return arrays 1`] = `
"User-agent: test2
Disallow: /1
Disallow: /2
Allow: /3
Allow: /4
Sitemap: https://example.com/sitemap.xml
"
`;

exports[`createPlugin Disallow is empty 1`] = `
"User-agent: test3
Disallow:
Sitemap: https://example.com/sitemap.xml
"
`;

exports[`createPlugin cleanParam: "s" 1`] = `
"User-agent: test4
Disallow: /
Clean-param: s
Sitemap: https://example.com/sitemap.xml
"
`;

exports[`createPlugin cleanParam is empty 1`] = `
"User-agent: *
Allow: /
Sitemap: https://example.com/sitemap.xml
"
`;
